<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/gameoverTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/gameover"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/completionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameoverTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/completion"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/completionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:background="@color/light_gray"
        android:text="@string/newgame" />

</RelativeLayout>
